enums MenuOperacoes e CalcSeguro, classe Validacao adicionados. Métodos novos em Seguradora e Cliente.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /Seguradora.class
 /Sinistro.class
 /Veiculo.class
+/CalcSeguro.class
+/ClientePF.class
+/ClientePJ.class
+/Main$Menu.class
+/MenuOperacoes.class
+/Validacao.class
